Modif accueil html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>
             Fonctionnement
         </h2>
-        <ol>
+        <ul>
             <li class="fonctionnement__selection">
                 <a href="#">
                     <div class="fonctionnement__selection--nombre">
@@ -86,7 +86,7 @@
                     </div>
                 </a>
             </li>
-        </ol>
+        </ul>
     </section>
         <!-- main -->
     <main class="main">
@@ -207,7 +207,7 @@
                         <h4>Mentions légales</h4>
                     </li>
                     <li class="footer__menu">
-                        <a href="Mailto">
+                        <a href="mailto">
                             <h4>Contact</h4>
                         </a>
                     </li>
