--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                                 </p>
                             </div>
                             <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart vide"></i>
-                                <i class="fa-regular fa-heart plein"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>     
                         </div>
                     </article>
@@ -134,8 +133,7 @@
                                 </p>
                             </div>
                             <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart vide"></i>
-                                <i class="fa-regular fa-heart plein"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>     
                         </div>
                     </article>
@@ -155,8 +153,7 @@
                                 </p>
                             </div>
                             <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart vide"></i>
-                                <i class="fa-regular fa-heart plein"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>     
                         </div>
                     </article>
@@ -176,8 +173,7 @@
                                 </p>
                             </div>
                             <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart vide"></i>
-                                <i class="fa-regular fa-heart plein"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>     
                         </div>
                     </article>
@@ -207,7 +203,7 @@
                         <h4>Mentions légales</h4>
                     </li>
                     <li class="footer__menu">
-                        <a href="mailto">
+                        <a href="mailto:contact@ohmyfood.com">
                             <h4>Contact</h4>
                         </a>
                     </li>
