--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -18,6 +18,28 @@
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image la palette du goût">
     </div>
     <!-- main -->
+    <main>
+     <!-- section carte menu -->
+     <section class="global-menu">
+        <!-- info -->
+        <div class="global-menu__info">
+            <h2>
+                La palette du goût
+            </h2>
+            <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+        </div>
+        <!-- type -->
+        <div class="global-menu__titre">
+            <h3>Entrées</h3>
+        </div>
+        <!-- section menu entrée -->
+        <section class="menu">
+
+        </section>
+     </section>   
+    </main>
 
 </body>
 </html>
