--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -36,6 +36,18 @@
         </div>
         <!-- section menu entrée -->
         <section class="menu">
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>Fricassée d'escargot</h4>
+                    <div class="menu__choix--descriptif">
+                        <p>Au piment d'Espelette </p>
+                        <span>25€</span>
+                    </div>
+                    <div class="menu__choix--descriptif--heart">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                </a>
+            </div>
 
         </section>
      </section>   
