--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -43,8 +43,32 @@
                         <p>Au piment d'Espelette </p>
                         <span>25€</span>
                     </div>
-                    <div class="menu__choix--descriptif--heart">
-                        <i class="fa-regular fa-heart"></i>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>Foie gras de canard mi-cuit</h4>
+                    <div class="menu__choix--descriptif">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <span>35€</span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>Œuf au plat</h4>
+                    <div class="menu__choix--descriptif">
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <span>20€</span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </a>
             </div>
