--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -32,16 +32,24 @@
         </div>
         <!-- type -->
         <div class="global-menu__titre">
-            <h3>Entrées</h3>
+            <h3>
+                Entrées
+            </h3>
         </div>
         <!-- section menu entrée -->
         <section class="menu">
             <div class="menu__choix">
                 <a href="#">
-                    <h4>Fricassée d'escargot</h4>
+                    <h4>
+                        Fricassée d'escargot
+                    </h4>
                     <div class="menu__choix--descriptif">
-                        <p>Au piment d'Espelette </p>
-                        <span>25€</span>
+                        <p>
+                            Au piment d'Espelette 
+                        </p>
+                        <span>
+                            25€
+                        </span>
                     </div>
                     <div class="menu__choix--descriptif--valid">
                         <i class="fa-solid fa-circle-check"></i>
@@ -50,10 +58,16 @@
             </div>
             <div class="menu__choix">
                 <a href="#">
-                    <h4>Foie gras de canard mi-cuit</h4>
+                    <h4>
+                        Foie gras de canard mi-cuit
+                    </h4>
                     <div class="menu__choix--descriptif">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <span>35€</span>
+                        <p>
+                            Et ses copeaux de truffe noire
+                        </p>
+                        <span>
+                            35€
+                        </span>
                     </div>
                     <div class="menu__choix--descriptif--valid">
                         <i class="fa-solid fa-circle-check"></i>
@@ -62,20 +76,180 @@
             </div>
             <div class="menu__choix">
                 <a href="#">
-                    <h4>Œuf au plat</h4>
+                    <h4>
+                        Œuf au plat
+                    </h4>
                     <div class="menu__choix--descriptif">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <span>20€</span>
+                        <p>
+                            Assaisonné à la truffe sur lit de caviar
+                        </p>
+                        <span>
+                            20€
+                        </span>
                     </div>
                     <div class="menu__choix--descriptif--valid">
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </a>
             </div>
-
+        </section>
+        <!-- type -->
+        <div class="global-menu__titre">
+            <h3>
+                Plats
+            </h3>
+        </div>
+        <!-- section menu plat -->
+        <section class="menu">
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Filet de boeuf aux herbes
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            Accompagné de sa ribambelle de légumes
+                        </p>
+                        <span>
+                            40€
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Parmentier de queue de boeuf
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            À la truffe noire sur sa purée de panais
+                        </p>
+                        <span>
+                            35€
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Filet de turbot
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            Aux agrumes
+                        </p>
+                        <span>
+                            44€
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
+        <!-- type -->
+        <div class="global-menu__titre">
+            <h3>
+                Desserts
+            </h3>
+        </div>
+        <!-- section menu plat -->
+        <section class="menu">
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Paris-Brest
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            Revisité
+                        </p>
+                        <span>
+                            18€
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Macaron au chocolat d'exception 
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            Et glace à la vanille de Madagascar
+                        </p>
+                        <span>
+                            22€
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__choix">
+                <a href="#">
+                    <h4>
+                        Mousse au chocolat 
+                    </h4>
+                    <div class="menu__choix--descriptif">
+                        <p>
+                            Au piment d'Espelette et à la truffe noire
+                        </p>
+                        <span>
+                            23€  
+                        </span>
+                    </div>
+                    <div class="menu__choix--descriptif--valid">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </a>
+            </div>
         </section>
      </section>   
     </main>
-
+    <!--Footer-->
+    <footer>
+        <div class="footer">
+            <h2 class="footer__logo">ohmyfood</h2>
+            <div class="footer__info">
+                <ul>
+                    <li class="footer__menu">
+                        <div class="footer__menu--icone">
+                            <i class="fa-solid fa-utensils"></i>
+                        </div>
+                        <h4>Proposer un restaurant</h4>
+                    </li>
+                    <li class="footer__menu">
+                        <div class="footer__menu--icone">
+                            <i class="fa-solid fa-handshake-angle"></i>
+                        </div>
+                        <h4>Devenir partenaire</h4>
+                    </li>
+                    <li class="footer__menu">
+                        <h4>Mentions légales</h4>
+                    </li>
+                    <li class="footer__menu">
+                        <a href="mailto:contact@ohmyfood.com">
+                            <h4>Contact</h4>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
