--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./sass/style.css">
 </head>
 <body>
+    <div id="bloc-page">
     <!--Header-->
     <header class="header">
         <h1 class="header__logo">
@@ -212,7 +213,6 @@
             </div>
         </div>
     </footer>
-
-
+</div>
 </body>
 </html>
