--- a/index.html
+++ b/index.html
@@ -42,53 +42,46 @@
         <h2>
             Fonctionnement
         </h2>
-        <ul>
-            <li class="fonctionnement__selection">
-                <a href="#">
-                    <div class="fonctionnement__selection--nombre">
-                        1
-                    </div>
-                    <div class="fonctionnement__selection--icone">
-                        <i class="fa-solid fa-mobile-screen-button"></i>
-                    </div>
-                    <div class="fonctionnement__selection--texte">
-                        <h3>
-                            Choisissez un restaurant
-                        </h3>
-                    </div>
-                </a>
-            </li>
-            <li class="fonctionnement__selection">
-                <a href="#">
-                    <div class="fonctionnement__selection--nombre">
-                        2
-                    </div>
-                    <div class="fonctionnement__selection--icone">
-                        <i class="fa-solid fa-list-ul"></i>
-                    </div>
-                    <div class="fonctionnement__selection--texte">
-                        <h3>
-                            Composez votre menu
-                        </h3>
-                    </div>
-                </a>
-            </li>
-            <li class="fonctionnement__selection">
-                <a href="#">
-                    <div class="fonctionnement__selection--nombre">
-                        3
-                    </div>
-                    <div class="fonctionnement__selection--icone">
-                        <i class="fa-solid fa-store"></i>
-                    </div>
-                    <div class="fonctionnement__selection--texte">
-                        <h3>
-                            Dégustez au restaurant
-                        </h3>
-                    </div>
-                </a>
-            </li>
-        </ul>
+        <div class="fonctionnement__selectionall">
+            <a class="fonctionnement__selection" href="#choisir">
+                <div class="fonctionnement__selection--nombre">
+                    1
+                </div>
+                <div class="fonctionnement__selection--icone">
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                </div>
+                <div class="fonctionnement__selection--texte">
+                    <h3>
+                    Choisissez un restaurant
+                    </h3>
+                </div>
+            </a>
+            <a class="fonctionnement__selection" href="composer">
+                <div class="fonctionnement__selection--nombre">
+                    2
+                </div>
+                <div class="fonctionnement__selection--icone">
+                    <i class="fa-solid fa-list-ul"></i>
+                </div>
+                <div class="fonctionnement__selection--texte">
+                    <h3>
+                    Composez votre menu
+                    </h3>
+                </div>
+            </a>
+            <a class="fonctionnement__selection" href="deguster">
+                <div class="fonctionnement__selection--nombre">
+                    3
+                </div>
+                <div class="fonctionnement__selection--icone">
+                    <i class="fa-solid fa-store"></i>
+                </div>
+                <div class="fonctionnement__selection--texte">
+                    <h3>
+                    Dégustez au restaurant
+                    </h3>
+                </div>
+            </a>
     </section>
         <!-- main -->
     <main class="main">
