--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </h3>
                 </div>
             </a>
-            <a class="fonctionnement__selection" href="composer">
+            <a class="fonctionnement__selection" href="#composer">
                 <div class="fonctionnement__selection--nombre">
                     2
                 </div>
@@ -69,7 +69,7 @@
                     </h3>
                 </div>
             </a>
-            <a class="fonctionnement__selection" href="deguster">
+            <a class="fonctionnement__selection" href="#deguster">
                 <div class="fonctionnement__selection--nombre">
                     3
                 </div>
