--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     </h3>
                 </div>
             </a>
+        </div>
     </section>
         <!-- main -->
     <main class="main">
@@ -186,16 +187,16 @@
                         <div class="footer__menu--icone">
                             <i class="fa-solid fa-utensils"></i>
                         </div>
-                        <h4>Proposer un restaurant</h4>
+                        <h3>Proposer un restaurant</h3>
                     </li>
                     <li class="footer__menu">
                         <div class="footer__menu--icone">
                             <i class="fa-solid fa-handshake-angle"></i>
                         </div>
-                        <h4>Devenir partenaire</h4>
+                        <h3>Devenir partenaire</h3>
                     </li>
                     <li class="footer__menu">
-                        <h4>Mentions légales</h4>
+                        <h3>Mentions légales</h3>
                     </li>
                     <li class="footer__menu">
                         <a href="mailto:contact@ohmyfood.com">
