Main-restaurant la palette du gout

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -48,7 +48,7 @@
             <div class="menu__card--choix">
                 <a href="#">
                     <h4>
-                        Fricassée d'escargot
+                        Fricassée d'escargots
                     </h4>
                     <div class="menu__card--choix--descriptif">
                         <p>
@@ -226,6 +226,11 @@
                 </a>
             </div>
         </section>
+        <a class="menu__button" href="#">
+            <div class="menu_button--commander">
+                Commander
+            </div>
+        </a>
     </main>
     <!--Footer-->
     <footer>
