boutton-la palette du gout

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -27,8 +27,8 @@
     </div>
     <!-- main -->
     <main class="menu">
-     <!-- section carte menu -->
-    <section class="menu__annonce">
+        <!-- section carte menu -->
+        <section class="menu__annonce">
         <!-- info -->
             <h2 class="menu__annonce--titre">
                 La palette du goût
@@ -36,7 +36,7 @@
             <div class="menu__annonce--heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
-    </section>
+        </section>
         <!-- type -->
         <div class="menu__type">
             <h3>
@@ -226,8 +226,9 @@
                 </a>
             </div>
         </section>
+        <!-- Commander-->
         <a class="menu__button" href="#">
-            <div class="menu_button--commander">
+            <div class="menu__button--commander">
                 Commander
             </div>
         </a>
