modification index - localisation

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </h1>
     </header>
     <!-- section localisation-->
-    <section class="localisation">
+    <form class="localisation">
         <div class="localisation__recherche">
             <i class="fa-solid fa-location-dot"></i>
             <input type="search" placeholder="Paris, Belleville">
         </div>
-    </section>
+    </form>
     <!-- section description-->
     <section class="description">
         <h2 class="description__titre">
