--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div id="bloc-page">
+    <!-- page accueil -->
+
+    <!--Loader-->
+
+
     <!--Header-->
     <header class="header">
         <h1 class="header__logo">
