--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -37,201 +37,211 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
         </section>
-        <!-- type -->
-        <div class="menu__type">
-            <h3>
-                Entrées
-            </h3>
+        
+        <div class="menu__full">
+            <div class="full">
+                <!-- type -->
+                <div class="menu__type">
+                    <h3>
+                        Entrées
+                    </h3>
+                </div>            
+                <!-- section menu entrée -->
+                <section class="menu__card">
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Fricassée d'escargots
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Au piment d'Espelette 
+                                </p>
+                                <span>
+                                    25€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Foie gras de canard mi-cuit
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Et ses copeaux de truffe noire
+                                </p>
+                                <span>
+                                    35€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Œuf au plat
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Assaisonné à la truffe sur lit de caviar
+                                </p>
+                                <span>
+                                    20€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+            </div>
+            <div class="full">
+                <!-- type -->
+                <div class="menu__type">
+                    <h3>
+                        Plats
+                    </h3>
+                </div>
+                <!-- section menu plat -->
+                <section class="menu__card">
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Filet de boeuf aux herbes
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Accompagné de sa ribambelle de légumes
+                                </p>
+                                <span>
+                                    40€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Parmentier de queue de boeuf
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    À la truffe noire sur sa purée de panais
+                                </p>
+                                <span>
+                                    35€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Filet de turbot
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Aux agrumes
+                                </p>
+                                <span>
+                                    44€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+            </div>
+            <div class="full">
+                <!-- type -->
+                <div class="menu__type">
+                    <h3>
+                        Desserts
+                    </h3>
+                </div>
+                <!-- section menu dessert -->
+                <section class="menu__card">
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Paris-Brest
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Revisité
+                                </p>
+                                <span>
+                                    18€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Macaron au chocolat d'exception 
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Et glace à la vanille de Madagascar
+                                </p>
+                                <span>
+                                    22€
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="menu__card--choix">
+                        <a href="#">
+                            <h4>
+                                Mousse au chocolat 
+                            </h4>
+                            <div class="menu__card--choix--descriptif">
+                                <p>
+                                    Au piment d'Espelette et à la truffe noire
+                                </p>
+                                <span>
+                                    23€  
+                                </span>
+                            </div>
+                            <div class="menu__card--choix--descriptif--valid">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+            </div>
         </div>
-        <!-- section menu entrée -->
-        <section class="menu__card">
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Fricassée d'escargots
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Au piment d'Espelette 
-                        </p>
-                        <span>
-                            25€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Foie gras de canard mi-cuit
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Et ses copeaux de truffe noire
-                        </p>
-                        <span>
-                            35€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Œuf au plat
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Assaisonné à la truffe sur lit de caviar
-                        </p>
-                        <span>
-                            20€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-        </section>
-        <!-- type -->
-        <div class="menu__type">
-            <h3>
-                Plats
-            </h3>
-        </div>
-        <!-- section menu plat -->
-        <section class="menu__card">
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Filet de boeuf aux herbes
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Accompagné de sa ribambelle de légumes
-                        </p>
-                        <span>
-                            40€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Parmentier de queue de boeuf
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            À la truffe noire sur sa purée de panais
-                        </p>
-                        <span>
-                            35€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Filet de turbot
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Aux agrumes
-                        </p>
-                        <span>
-                            44€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-        </section>
-        <!-- type -->
-        <div class="menu__type">
-            <h3>
-                Desserts
-            </h3>
-        </div>
-        <!-- section menu plat -->
-        <section class="menu__card">
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Paris-Brest
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Revisité
-                        </p>
-                        <span>
-                            18€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Macaron au chocolat d'exception 
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Et glace à la vanille de Madagascar
-                        </p>
-                        <span>
-                            22€
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__card--choix">
-                <a href="#">
-                    <h4>
-                        Mousse au chocolat 
-                    </h4>
-                    <div class="menu__card--choix--descriptif">
-                        <p>
-                            Au piment d'Espelette et à la truffe noire
-                        </p>
-                        <span>
-                            23€  
-                        </span>
-                    </div>
-                    <div class="menu__card--choix--descriptif--valid">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </a>
-            </div>
-        </section>
         <!-- Commander-->
         <a class="menu__button" href="#">
             <div class="menu__button--commander">
                 Commander
             </div>
         </a>
+    
     </main>
     <!--Footer-->
     <footer>
