--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- page accueil -->
 
     <!--Loader-->
-
+    <div class="loader">
+        <span class="loader_bars">
+        </span>
+    </div>
 
     <!--Header-->
     <header class="header">
