--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./sass/style.css">
 </head>
 <body>
+    <div id="bloc-page">
     <!--Header-->
     <header class="header">
         <div class="header__restau">
@@ -273,5 +274,6 @@
             </div>
         </div>
     </footer>
+    </div>
 </body>
 </html>
