--- a/index.html
+++ b/index.html
@@ -10,184 +10,183 @@
 </head>
 <body>
     <div id="bloc-page">
-    <!-- page accueil -->
+        <!-- page accueil -->
 
-    <!--Loader-->
-    <div class="loader">
-        <span class="loader_bars">
-        </span>
-    </div>
-
-    <!--Header-->
-    <header class="header">
-        <h1 class="header__logo">
-            ohmyfood
-        </h1>
-    </header>
-    <!-- section localisation-->
-    <form class="localisation">
-        <div class="localisation__recherche">
-            <i class="fa-solid fa-location-dot"></i>
-            <input type="search" placeholder="Paris, Belleville">
+        <!--Loader-->
+        <div class="loader">
+            <span class="loader_bars">
+            </span>
         </div>
-    </form>
-    <!-- section description-->
-    <section class="description">
-        <h2 class="description__titre">
-            Réservez le menu qui vous convient
-        </h2>
-        <p class="description__texte">
-            Découvrez des restaurants d'exception, sélectionnés par nos soins.
-        </p>
-        <a href="#">
-            <div class="description__button-menu">
-                Explorer nos restaurants
+
+        <!--Header-->
+        <header class="header">
+            <h1 class="header__logo">
+                ohmyfood
+            </h1>
+        </header>
+        <!-- section localisation-->
+        <form class="localisation">
+            <div class="localisation__recherche">
+                <i class="fa-solid fa-location-dot"></i>
+                <input type="search" placeholder="Paris, Belleville">
             </div>
-        </a>
-    </section>
-    <!--fonctionnement-->
-    <section class="fonctionnement">
-        <h2>
-            Fonctionnement
-        </h2>
-        <div class="fonctionnement__selectionall">
-            <a class="fonctionnement__selection" href="#choisir">
-                <div class="fonctionnement__selection--nombre">
-                    1
-                </div>
-                <div class="fonctionnement__selection--icone">
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                </div>
-                <div class="fonctionnement__selection--texte">
-                    <h3>
-                    Choisissez un restaurant
-                    </h3>
-                </div>
-            </a>
-            <a class="fonctionnement__selection" href="#composer">
-                <div class="fonctionnement__selection--nombre">
-                    2
-                </div>
-                <div class="fonctionnement__selection--icone">
-                    <i class="fa-solid fa-list-ul"></i>
-                </div>
-                <div class="fonctionnement__selection--texte">
-                    <h3>
-                    Composez votre menu
-                    </h3>
-                </div>
-            </a>
-            <a class="fonctionnement__selection" href="#deguster">
-                <div class="fonctionnement__selection--nombre">
-                    3
-                </div>
-                <div class="fonctionnement__selection--icone">
-                    <i class="fa-solid fa-store"></i>
-                </div>
-                <div class="fonctionnement__selection--texte">
-                    <h3>
-                    Dégustez au restaurant
-                    </h3>
-                </div>
-            </a>
-        </div>
-    </section>
-        <!-- main -->
-    <main class="main">
-        <!-- section restaurants -->
-        <section class="restaurants">
-            <h2>
-                Restaurants
+        </form>
+        <!-- section description-->
+        <section class="description">
+            <h2 class="description__titre">
+                Réservez le menu qui vous convient
             </h2>
-            <div class="restaurants__cards">
-                <a href="./lapalettedugout.html">
-                    <article class="restaurants__card">
-                        <div class="restaurants__card--image">
-                            <p class="bulle">Nouveau</p>
-                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        </div>
-                        <div class="restaurants__card--descriptif">
-                            <div class="restaurants__card--descriptif--info">
-                                <h3 class="restaurants__card--descriptif--info1">
-                                    La palette du goût
-                                </h3>
-                                <p class="restaurants__card--descriptif--info2">
-                                    Ménilmontant
-                                </p>
-                            </div>
-                            <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart"></i>
-                            </div>     
-                        </div>
-                    </article>
+            <p class="description__texte">
+                Découvrez des restaurants d'exception, sélectionnés par nos soins.
+            </p>
+            <a href="#">
+                <div class="description__button-menu">
+                    Explorer nos restaurants
+                </div>
+            </a>
+        </section>
+        <!--fonctionnement-->
+        <section class="fonctionnement">
+            <h2>
+                Fonctionnement
+            </h2>
+            <div class="fonctionnement__selectionall">
+                <a class="fonctionnement__selection" href="#choisir">
+                    <div class="fonctionnement__selection--nombre">
+                        1
+                    </div>
+                    <div class="fonctionnement__selection--icone">
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                    </div>
+                    <div class="fonctionnement__selection--texte">
+                        <h3>
+                        Choisissez un restaurant
+                        </h3>
+                    </div>
                 </a>
-                <a href="./lanoteenchantee.html">
-                    <article class="restaurants__card">
-                        <div class="restaurants__card--image">
-                            <p class="bulle">Nouveau</p>
-                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                        </div>
-                        <div class="restaurants__card--descriptif">
-                            <div class="restaurants__card--descriptif--info">
-                                <h3 class="restaurants__card--descriptif--info1">
-                                    La note enchantée
-                                </h3>
-                                <p class="restaurants__card--descriptif--info2">
-                                    Charonne
-                                </p>
-                            </div>
-                            <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart"></i>
-                            </div>     
-                        </div>
-                    </article>
+                <a class="fonctionnement__selection" href="#composer">
+                    <div class="fonctionnement__selection--nombre">
+                        2
+                    </div>
+                    <div class="fonctionnement__selection--icone">
+                        <i class="fa-solid fa-list-ul"></i>
+                    </div>
+                    <div class="fonctionnement__selection--texte">
+                        <h3>
+                        Composez votre menu
+                        </h3>
+                    </div>
                 </a>
-                <a href="./alafrancaise.html">
-                    <article class="restaurants__card">
-                        <div class="restaurants__card--image">
-                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                        </div>
-                        <div class="restaurants__card--descriptif">
-                            <div class="restaurants__card--descriptif--info">
-                                <h3 class="restaurants__card--descriptif--info1">
-                                    À la française
-                                </h3>
-                                <p class="restaurants__card--descriptif--info2">
-                                    Cité Rouge
-                                </p>
-                            </div>
-                            <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart"></i>
-                            </div>     
-                        </div>
-                    </article>
+                <a class="fonctionnement__selection" href="#deguster">
+                    <div class="fonctionnement__selection--nombre">
+                        3
+                    </div>
+                    <div class="fonctionnement__selection--icone">
+                        <i class="fa-solid fa-store"></i>
+                    </div>
+                    <div class="fonctionnement__selection--texte">
+                        <h3>
+                        Dégustez au restaurant
+                        </h3>
+                    </div>
                 </a>
-                <a href="./ledelicedessens.html">
-                    <article class="restaurants__card">
-                        <div class="restaurants__card--image">
-                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                        </div>
-                        <div class="restaurants__card--descriptif">
-                            <div class="restaurants__card--descriptif--info">
-                                <h3 class="restaurants__card--descriptif--info1">
-                                    Le délice des sens
-                                </h3>
-                                <p class="restaurants__card--descriptif--info2">
-                                    Folie-Méricourt
-                                </p>
-                            </div>
-                            <div class="restaurants__card--descriptif--heart">
-                                <i class="fa-regular fa-heart"></i>
-                            </div>     
-                        </div>
-                    </article>
-                </a>   
             </div>
         </section>
-    </main>
-    <!--Footer-->
-    <footer>
-        <div class="footer">
+            <!-- main -->
+        <main class="main">
+            <!-- section restaurants -->
+            <section class="restaurants">
+                <h2>
+                    Restaurants
+                </h2>
+                <div class="restaurants__cards">
+                    <a href="./lapalettedugout.html">
+                        <article class="restaurants__card">
+                            <div class="restaurants__card--image">
+                                <p class="bulle">Nouveau</p>
+                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            </div>
+                            <div class="restaurants__card--descriptif">
+                                <div class="restaurants__card--descriptif--info">
+                                    <h3 class="restaurants__card--descriptif--info1">
+                                        La palette du goût
+                                    </h3>
+                                    <p class="restaurants__card--descriptif--info2">
+                                        Ménilmontant
+                                    </p>
+                                </div>
+                                <div class="restaurants__card--descriptif--heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>     
+                            </div>
+                        </article>
+                    </a>
+                    <a href="./lanoteenchantee.html">
+                        <article class="restaurants__card">
+                            <div class="restaurants__card--image">
+                                <p class="bulle">Nouveau</p>
+                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            </div>
+                            <div class="restaurants__card--descriptif">
+                                <div class="restaurants__card--descriptif--info">
+                                    <h3 class="restaurants__card--descriptif--info1">
+                                        La note enchantée
+                                    </h3>
+                                    <p class="restaurants__card--descriptif--info2">
+                                        Charonne
+                                    </p>
+                                </div>
+                                <div class="restaurants__card--descriptif--heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>     
+                            </div>
+                        </article>
+                    </a>
+                    <a href="./alafrancaise.html">
+                        <article class="restaurants__card">
+                            <div class="restaurants__card--image">
+                                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                            </div>
+                            <div class="restaurants__card--descriptif">
+                                <div class="restaurants__card--descriptif--info">
+                                    <h3 class="restaurants__card--descriptif--info1">
+                                        À la française
+                                    </h3>
+                                    <p class="restaurants__card--descriptif--info2">
+                                        Cité Rouge
+                                    </p>
+                                </div>
+                                <div class="restaurants__card--descriptif--heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>     
+                            </div>
+                        </article>
+                    </a>
+                    <a href="./ledelicedessens.html">
+                        <article class="restaurants__card">
+                            <div class="restaurants__card--image">
+                                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            </div>
+                            <div class="restaurants__card--descriptif">
+                                <div class="restaurants__card--descriptif--info">
+                                    <h3 class="restaurants__card--descriptif--info1">
+                                        Le délice des sens
+                                    </h3>
+                                    <p class="restaurants__card--descriptif--info2">
+                                        Folie-Méricourt
+                                    </p>
+                                </div>
+                                <div class="restaurants__card--descriptif--heart">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>     
+                            </div>
+                        </article>
+                    </a>   
+                </div>
+            </section>
+        </main>
+        <!--Footer-->
+        <footer class="footer">
             <h2 class="footer__logo">ohmyfood</h2>
             <div class="footer__info">
                 <ul>
@@ -213,8 +212,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </footer>
-</div>
+        </footer>
+    </div>
 </body>
 </html>
